--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "netninja1",
+  "proxy": "http://127.0.0.1:7000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "framer-motion": "^2.6.15",
     "node-sass": "^4.14.1",
@@ -19,9 +21,13 @@
     "react-hamburger-menu": "^1.2.1",
     "react-icons": "^3.11.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "swiper": "^6.3.2"
   },
   "scripts": {
