--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netninja1",
-  "proxy": "http://127.0.0.1:7000",
+  "proxy": "https://warm-bayou-88011.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
